Implement partner registration and landing page
Added partner landing page, registration form with 3 steps, email verification codes table, PartnerRegistrationService, and all registration endpoints